--- a/index.html
+++ b/index.html
@@ -10,51 +10,51 @@
 <body>
     <main>
         <div class="instant-weather">
-            <h1 class="instant-weather__title">Bourges</h1>
+            <h1 class="instant-weather__title">Méteo</h1>
             <div class="instant-weather__bloc">
-                <p class="instant-weather__temp">10<span>°</span></p>
-                <p class="instant-weather__description">Soleil</p>
+                <p class="instant-weather__temp"><span>°</span></p>
+                <p class="instant-weather__description"></p>
             </div>
         </div>
     <div class="container">
             <div class="hourly-weather">
                 <div class="hourly-weather__container">
-                    <p class="hourly-weather__hour">9h</p>
+                    <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
                         <p class="hourly-weather__temp">15<span>°</span></p>
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
-                    <p class="hourly-weather__hour">9h</p>
+                    <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
                         <p class="hourly-weather__temp">15<span>°</span></p>
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
-                    <p class="hourly-weather__hour">9h</p>
+                    <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
                         <p class="hourly-weather__temp">15<span>°</span></p>
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
-                    <p class="hourly-weather__hour">9h</p>
+                    <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
                         <p class="hourly-weather__temp">15<span>°</span></p>
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
-                    <p class="hourly-weather__hour">9h</p>
+                    <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
                         <p class="hourly-weather__temp">15<span>°</span></p>
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
-                    <p class="hourly-weather__hour">9h</p>
+                    <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
                         <p class="hourly-weather__temp">15<span>°</span></p>
                     </div>
@@ -70,7 +70,7 @@
 
             <div class="day-weather">
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Lun.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Mar.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Mer.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Jeu.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Ven.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Sam.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="day-weather__container">
-                    <p class="day-weather__day">Dim.</p>
+                    <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
                         <p class="day-weather__min-temp">5<span>°</span></p>
                         <p class="day-weather__max-temp">10<span>°</span></p>
@@ -134,5 +134,6 @@
             </div>
     </div>
     </main>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 </html>
