fetch data in api and dynamic page done

--- a/index.html
+++ b/index.html
@@ -21,49 +21,56 @@
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour"></p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
 
                 <div class="hourly-weather__container">
                     <p class="hourly-weather__hour">9h</p>
                     <div class="hourly-weather__temp-bloc">
-                        <p class="hourly-weather__temp">15<span>°</span></p>
+                        <p class="hourly-weather__temp"></p>
+                        <img alt="weather" class="hourly-weather__logo">
                     </div>
                 </div>
             </div>
@@ -72,63 +79,63 @@
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img  alt="weather" class="day-weather__logo">
                     </div>
                 </div>
 
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img  alt="weather" class="day-weather__logo">
                     </div>
                 </div>
 
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img  alt="weather" class="day-weather__logo" > 
                     </div>
                 </div>
 
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img  alt="weather" class="day-weather__logo">
                     </div>
                 </div>
 
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img  alt="weather" class="day-weather__logo">
                     </div>
                 </div>
 
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img alt="weather" class="day-weather__logo">
                     </div>
                 </div>
 
                 <div class="day-weather__container">
                     <p class="day-weather__day"></p>
                     <div class="day-weather__temp-bloc">
-                        <p class="day-weather__min-temp">5<span>°</span></p>
-                        <p class="day-weather__max-temp">10<span>°</span></p>
-                        <img src="./assets/day/02d.png" alt="weather">
+                        <p class="day-weather__min-temp"></p>
+                        <p class="day-weather__max-temp"></p>
+                        <img alt="weather" class="day-weather__logo">
                     </div>
                 </div>
             </div>
