add responsive for desktop and darkmode

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Méteo</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="light">
     <main>
+        <div class="btn-toggle">Dark</div>
         <div class="instant-weather">
-            <h1 class="instant-weather__title">Méteo</h1>
             <div class="instant-weather__bloc">
                 <p class="instant-weather__temp"><span>°</span></p>
                 <p class="instant-weather__description"></p>
